# SourceSync

./: CMakeLists.txt  README.md
PdbGeneratorPy/: CMakeLists.txt  Export.cpp  Export.h
SourceSync/Ida/: FunctionDataExtractor.py  PEDataExtractor.py  SourceSync.py  TypeExtractor.py
